fix product image presentation on main screen

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                     <div class="center-align">
                                         <h5 ng-cloak ng-click="showProductInfo(item)">{{item.title}}</h5>
                                         <div>
-                                            <img src="#" alt="{{products.data[0].img}}" ng-click="showProductInfo(item)">
+                                            <img src="#" alt="{{item.img}}" ng-click="showProductInfo(item)">
                                         </div>
                                     </div>
                                     <p ng-cloak ng-click="showProductInfo(item)">{{item.text}}</p>
